--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,14 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.LocationDisplayer div{
+  border: 1px solid white;
+  background-color: #d3d3d3c2;
+  padding: 2px 10px;
+}
+
+.LocationDisplayer div:hover{
+  cursor: pointer;
+  background-color: #d2d6dacf;
+}
